<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_PN" Id="{d0251ff4-a309-4c54-8d9d-1f21c8bac127}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Global Profinet Varable input and output
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2023
//
// ***********************************************************************************

VAR_GLOBAL

	// Digital Output from robot (1 bit)
	DO_From_ROB AT %I* :ARRAY[0..31] OF BYTE; 
	// Group Output from robot (16 bit or 32 bit) 
	GO_From_ROB AT %I* :ARRAY[32..255] OF BYTE;
	// Digital Input to robot (1 bit)
	DI_To_ROB AT %Q* :ARRAY[0..31] OF BYTE;
	// Group Input to robot (16 bit or 32 bit)
	GI_To_ROB AT %Q* :ARRAY[32..255] OF BYTE;	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>