<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_PNDataConvert" Id="{f7d26543-681d-42ee-b4b0-773d93a30fbb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_PNDataConvert
VAR
	
	sizearr: UINT;

	arr_GISlot: ARRAY[32..255] OF BYTE;
	arr_GOSlot: ARRAY[32..255] OF BYTE;

	arr_CC1_DOSlot: ARRAY[0..7] OF BOOL;
	arr_CC1_DISlot: ARRAY[0..7] OF BOOL;
	
	
	arr_MI1_DOSlot: ARRAY [0..7] OF BOOL;
	arr_MI1_DISlot: ARRAY [0..7] OF BOOL;

	arr_CP1_DOSlot: ARRAY [0..7] OF BOOL;
	arr_CP1_DISlot: ARRAY [0..7] OF BOOL;

	arr_AP1_DOSlot: ARRAY [0..7] OF BOOL;
	arr_AP1_DISlot: ARRAY [0..7] OF BOOL;

	arr_SP1_DOSlot: ARRAY [0..7] OF BOOL;
	arr_SP1_DISlot: ARRAY [0..7] OF BOOL;

	// inline mixer
	on_MI1_status_speed_motor_1: UINT;
	on_MI1_status_speed_motor_2: UINT;
	
	on_MI1_status_torque_motor_1: UINT;
	on_MI1_status_torque_motor_2: UINT;
	
	on_MI1_status_temperature_motor_1 : UINT; 			
	on_MI1_status_temperature_motor_2 : UINT;
	
	on_MI1_status_temperature_funnel_outlet : UINT; 
	on_MI1_status_Pressure_funnel_inlet: UINT;
	
END_VAR



]]></Declaration>
    <Implementation>
      <ST><![CDATA[// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
//
// ***********************************************************************************
//
// PROJECT: A061 Digital Casting System
// FUNCTION: Profinet Variable Convertor
// AUTHOR: Weiting Chen
// EMAIL: chenw@usi.ch
// Copyright: USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2024
//
// ***********************************************************************************

// output(o_) to robot digital input (DI); input(i_) from robot digital output(DO)

// Array of DO_From_ROB is 0 to 255 bits | 0 to 31 bytes
// Array of GO_From_ROB is 256 to 2047 bits | 32 to 255 bytes
// Array of DI_To_ROB is 0 to 255 bits | 0 to 31 bytes
// Array of GI_To_ROB is 256 to 2047 bits | 32 to 255 bytes

// scale data by 100 for Real to UINT 
// Group input and output slots
	MEMCPY(ADR(GVL_PN.GI_To_ROB), ADR(arr_GISlot), SIZEOF(arr_GOSlot));
	MEMCPY(ADR(arr_GOSlot), ADR(GVL_PN.GO_From_ROB), SIZEOF(arr_GOSlot));
	
// Concrete Controller *****
	// Digital output from robot( mapping from 0 to 7 in robotstudio)
		arr_CC1_DOSlot := F_CONVERT_BYTE_TO_BIT(GVL_PN.DO_From_ROB[0]);
		GVL_ROB.ib_CC1_enable := arr_CC1_DOSlot[0]; // #0
		GVL_ROB.ib_CC1_reset := arr_CC1_DOSlot[1]; // #1

		
	// Group output from Robot ( mapping from 32 to 46, 8*2Bytes in robotstudio)
		F_Convert_2Byte_to_Int(GVL_ROB.in_spare, arr_GOSlot[32], arr_GOSlot[33]); // #256 to 271

	// Digital input to robot (mapping from 0 to 7 in robotstudio)
		arr_CC1_DISlot[0] := GVL_ROB.ob_mode_manual; // #0
		arr_CC1_DISlot[1] := GVL_ROB.ob_mode_laptop;
		arr_CC1_DISlot[2] := GVL_ROB.ob_mode_robot;
		arr_CC1_DISlot[3] := GVL_ROB.ob_CC1_power_on;
		
		// pointer 
		MEMCPY(ADR(GVL_PN.DI_To_ROB[0]), ADR(arr_CC1_DISlot), SIZEOF(arr_CC1_DISlot));
	
		
	// Group Input To Robot (32 to 46; 8*2Bytes)
		F_Convert_Int_to_2Byte(GVL_ROB.on_current_mode, arr_GISlot[32], arr_GISlot[33]); // #256 to 271


// Inline Mixer (MI1) *****
	// Digital output from robot ( mapping from 8 to 15 in robotstudio)
		arr_MI1_DOSlot := F_CONVERT_BYTE_TO_BIT(GVL_PN.DO_From_ROB[1]);
		GVL_ROB.ib_MI1_set_run := arr_MI1_DOSlot[0]; // [0 rpm to 120 rpm]
		GVL_ROB.ib_Ml1_enable := arr_MI1_DOSlot[1];
		GVL_ROB.ib_MI1_set_curved_speed_mode_on := arr_MI1_DOSlot[2];

	// Group output from Robot ( mapping from 47 to 61, 8*2Bytes in robotstudio)
		//F_Convert_2Byte_to_Int(GVL_ROB.in_MI1_set_speed, arr_GOSlot[47], arr_GOSlot[48]);
		// 
		F_Convert_2Byte_to_Uint(GVL_ROB.in_MI1_set_speed, arr_GOSlot[47], arr_GOSlot[48]);
		
		
	// Digital input to robot (mapping from 8 to 15 in robotstudio)
		//arr_MI1_DISlot := F_CONVERT_BYTE_TO_BIT(GVL_PN.DI_To_ROB[1]);
		arr_MI1_DISlot[0] := GVL_ROB.ob_MI1_is_run;
		arr_MI1_DISlot[1] := GVL_ROB.ob_MI1_is_ready;
		
		// pointer 
		// pointer S
		MEMCPY(ADR(GVL_PN.DI_To_ROB[1]), ADR(arr_MI1_DISlot), SIZEOF(arr_MI1_DISlot));

	// Group Input To Robot (mapping from 47 to 76, 16*2Bytes in robotstudio)
		on_MI1_status_speed_motor_1:=REAL_TO_UINT(INT_TO_REAL(GVL_ROB.on_MI1_status_speed_motor_1)/120*65535);
		on_MI1_status_speed_motor_2:=REAL_TO_UINT(INT_TO_REAL(GVL_ROB.on_MI1_status_speed_motor_2)/120*65535);
		
		on_MI1_status_torque_motor_1:=REAL_TO_UINT(GVL_ROB.on_MI1_status_torque_motor_1*100);
		on_MI1_status_torque_motor_2:=REAL_TO_UINT(GVL_ROB.on_MI1_status_torque_motor_2*100);
		
		on_MI1_status_temperature_motor_1:=REAL_TO_UINT(GVL_ROB.on_MI1_status_temperature_motor_1);
		on_MI1_status_temperature_motor_2:=REAL_TO_UINT(GVL_ROB.on_MI1_status_temperature_motor_2);
		
		on_MI1_status_temperature_funnel_outlet:=REAL_TO_UINT(GVL_ROB.on_MI1_status_temperature_funnel_outlet);
		on_MI1_status_pressure_funnel_inlet:=REAL_TO_UINT(GVL_ROB.on_MI1_status_pressure_funnel_inlet*100);		
		
		
		F_Convert_Uint_to_2Byte(on_MI1_status_speed_motor_1, arr_GISlot[47], arr_GISlot[48]);
		F_Convert_Uint_to_2Byte(on_MI1_status_speed_motor_2, arr_GISlot[49], arr_GISlot[50]);
		
		F_Convert_Uint_to_2Byte(on_MI1_status_torque_motor_1, arr_GISlot[51], arr_GISlot[52]);
		F_Convert_Uint_to_2Byte(on_MI1_status_torque_motor_2, arr_GISlot[53], arr_GISlot[54]);
		F_Convert_Uint_to_2Byte(on_MI1_status_temperature_motor_1, arr_GISlot[55], arr_GISlot[56]);
		F_Convert_Uint_to_2Byte(on_MI1_status_temperature_motor_2, arr_GISlot[57], arr_GISlot[58]);
		F_Convert_Uint_to_2Byte(on_MI1_status_temperature_funnel_outlet, arr_GISlot[59], arr_GISlot[60]);
		F_Convert_Uint_to_2Byte(on_MI1_status_Pressure_funnel_inlet, arr_GISlot[61], arr_GISlot[62]);
		


]]></ST>
    </Implementation>
    <LineIds Name="P_PNDataConvert">
      <LineId Id="27" Count="13" />
      <LineId Id="197" Count="0" />
      <LineId Id="42" Count="5" />
      <LineId Id="413" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="51" Count="0" />
      <LineId Id="274" Count="0" />
      <LineId Id="52" Count="4" />
      <LineId Id="222" Count="1" />
      <LineId Id="57" Count="4" />
      <LineId Id="63" Count="3" />
      <LineId Id="266" Count="0" />
      <LineId Id="402" Count="0" />
      <LineId Id="263" Count="0" />
      <LineId Id="224" Count="0" />
      <LineId Id="258" Count="0" />
      <LineId Id="69" Count="12" />
      <LineId Id="309" Count="0" />
      <LineId Id="277" Count="0" />
      <LineId Id="275" Count="1" />
      <LineId Id="83" Count="3" />
      <LineId Id="406" Count="1" />
      <LineId Id="409" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="87" Count="1" />
      <LineId Id="311" Count="0" />
      <LineId Id="348" Count="0" />
      <LineId Id="400" Count="0" />
      <LineId Id="387" Count="2" />
      <LineId Id="401" Count="0" />
      <LineId Id="312" Count="0" />
      <LineId Id="410" Count="0" />
      <LineId Id="412" Count="0" />
      <LineId Id="411" Count="0" />
      <LineId Id="385" Count="1" />
      <LineId Id="315" Count="0" />
      <LineId Id="351" Count="0" />
      <LineId Id="350" Count="0" />
      <LineId Id="91" Count="5" />
      <LineId Id="403" Count="0" />
      <LineId Id="405" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>